--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Batman</title>
+    <link rel="icon" src="./dcnvxir-d2a24f21-ee0b-4dd7-8e82-8889380424c4 (1).png">
     <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
